# onchain-game-world-builder

./: .gitignore  README.md
backend/: main.py  net.html  test.html  test.py
backend/on_chain_backend/: config.cfg  settings.py
backend/on_chain_backend/api/: routing.py
contract/near-ai-gaming-metaverse/: Cargo.toml  README.md
contract/near-ai-gaming-metaverse/src/: activity_logging.rs  errors.rs  game_assets.rs  lib.rs  monetization.rs  user_profiles.rs  world_creation.rs  world_editing.rs
frontend/: package.json
frontend/app/: page.tsx
tests/frontend/: dodo.html  home.html  kitty.html  script.js  styles.css  test.html
