[package]
name = "near-ai-gaming-metaverse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"] }
near-sdk-macros = "5.1.0"
borsh = "1.5"
borsh-derive = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"



